FoxcodePlus/tests/_a.ERR
replace myfield with "myvalue" + 
Error in line 90: Missing operand.
